# nftables-dns

./: Cargo.toml
src/: main.rs
