[package]
description = "Resolve domain names and create nftables IP sets with the IPs."
edition = "2021"
name = "nftables-dns"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = {version = "4.0.32", features = ["derive"]}
dns-lookup = "1.0.8"

[dev-dependencies]
tempfile = "3.3.0"
